--- a/models/SVM.ipynb
+++ b/models/SVM.ipynb
@@ -99,7 +99,7 @@
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X_lem, y_lem, test_size=0.20, random_state=15)\n",
     "\n",
-    "# using tf_idf vectorizor\n",
+    "# using tf_idf vectorizor with bigrams\n",
     "tfidf = TfidfVectorizer(stop_words= stop_words, ngram_range=(1,2))"
    ]
   },
