bigram mutual information score

--- a/preprocessing/nlp_preprocessing.ipynb
+++ b/preprocessing/nlp_preprocessing.ipynb
@@ -523,17 +523,108 @@
   },
   {
    "source": [
-    "Is seems that most of these are nonsensical phrases, and may indicate that the data is still dirty. However, let's start running some baseline models to see how they perform with this data."
+    "Is seems that most of these are nonsensical phrases, and may indicate that the data is still dirty. Next, we can use mutual information scores to show us the \"best\" bigrams."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Calculating Mutual Information Scores\n",
+    "\n",
+    "Pointwise Mutual Information Score is a statistical measure from information theory that generally measures the mutual dependence between two words. In plain english, this measures how much information the bigram itself contains by computing the dependence between the two words in the bigram. \n"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# creating a finder for pmi & passing in torkenized corpus\n",
+    "pmi_finder = BigramCollocationFinder.from_words(flat_filtered)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# applying frequency filter that only examines bigrams that occur more than 5 times\n",
+    "pmi_finder.apply_freq_filter(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# using finder to calculate pmi scores\n",
+    "pmi_scored = pmi_finder.score_ngrams(bigram_measures.pmi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[(('wishy', 'washy'), 14.922971472714778),\n",
+       " (('dej', 'loaf'), 14.70057905137833),\n",
+       " (('disrupts', 'shylock'), 14.700579051378327),\n",
+       " (('operation', 'disrupts'), 14.700579051378327),\n",
+       " (('shylock', 'banking'), 14.700579051378327),\n",
+       " (('aux', 'cord'), 14.507933973435932),\n",
+       " (('cargos', 'haircut'), 14.507933973435932),\n",
+       " (('spear', 'chucker'), 14.507933973435932),\n",
+       " (('trey', 'songz'), 14.507933973435932),\n",
+       " (('sweetest', 'joy'), 13.922971472714778),\n",
+       " (('coloured', 'cargos'), 13.922971472714774),\n",
+       " (('plot', 'twist'), 13.855857276856236),\n",
+       " (('khaki', 'coloured'), 13.659937066880982),\n",
+       " (('justin', 'bieber'), 13.585101833958394),\n",
+       " (('revenge', 'sweetest'), 13.49001206543867),\n",
+       " (('miley', 'cyrus'), 13.282967608435657),\n",
+       " (('scally', 'lad'), 13.218427356240948),\n",
+       " (('sloppy', 'toppy'), 13.186005878548569),\n",
+       " (('rated', 'spa'), 13.11561655065717),\n",
+       " (('twitpic', 'selfie'), 13.070528661128636),\n",
+       " (('grand', 'opening'), 13.016080877106258),\n",
+       " (('merry', 'christmas'), 12.963613457212123),\n",
+       " (('nicki', 'minaj'), 12.963613457212123),\n",
+       " (('ling', 'ling'), 12.922971472714778),\n",
+       " (('guinea', 'pig'), 12.852582144823376),\n",
+       " (('fairy', 'tale'), 12.761979596042472),\n",
+       " (('feather', 'flock'), 12.683505538019388),\n",
+       " (('catches', 'worm'), 12.630189723486929),\n",
+       " (('shy', 'glizzy'), 12.553737663049057),\n",
+       " (('nappy', 'headed'), 12.523040865826143)]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 35
+    }
+   ],
+   "source": [
+    "# first 30 elements in this list\n",
+    "pmi_scored[:30]"
+   ]
+  },
+  {
+   "source": [
+    "These are the top 30 bigrams, according to PMI score. Most of these are identifiable as English slang terms. Def Loaf is an american rapper, and Shylock is a malware that targets banks.\n",
+    "\n",
+    "We can impliment bigrams into models using `ngram_range` during the TF-IDF vectorization stage. From there, we can start running some baseline models to see how they perform with this data."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
