adding class_weight param to SVM

--- a/models/SVM.ipynb
+++ b/models/SVM.ipynb
@@ -24,14 +24,16 @@
  "cells": [
   {
    "source": [
-    "# Support Vector Machine (SVM) Modeling"
+    "# Support Vector Machine (SVM) Modeling\n",
+    "\n",
+    "The idea behind SVMs is that you perform classification by finding the seperation line or (in higher dimensions) 'hyperplane' that maximizes the distance between two classes."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,26 +118,43 @@
   },
   {
    "source": [
-    "## SVM Baseline"
+    "## SVM Baseline\n",
+    "\n",
+    "SVM Hyperparameters:\n",
+    "- `C` is the regularization parameter, `1.0` is the default\n",
+    "- `kernel` specifies the kernal type to be used in the algorithm, default is `rbf`\n",
+    "- `degree` is the degree of the polynomial kernal functions (`poly`), ignored by all other kernals\n",
+    "- `gamma` is the kernal coefficient for `rbf`, `poly` and `signmoid`, default is `scale`\n",
+    "- 'class_weight' default 1. If balanced, it uses the values of y to automatically adjust weights inversely proportional to class frequencies in the output data as `n_samples / (n_classes * np.bincount(y))`\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "SVM_baseline = svm.SVC(C=1.0, kernel='linear', degree=3, gamma='auto', random_state=20)"
+    "SVM_baseline = svm.SVC(C=1.0, kernel='linear', degree=3, gamma='auto', class_weight='balanced', random_state=20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "CPU times: user 51.7 s, sys: 688 ms, total: 52.4 s\nWall time: 52.6 s\n"
+     ]
+    }
+   ],
    "source": [
+    "%%time \n",
+    "# this cell takes about 53 seconds to run\n",
     "# fit the training dataset on the classifier\n",
     "SVM_baseline.fit(tfidf_data_train, y_train)\n",
     "# predict the labels on validation dataset\n",
@@ -144,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,14 +175,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Testing Metrics for SVM Baseline with Lemmatization & TF-IDF Vectorization\nPrecision: 0.6739\nRecall: 0.2222\nF1 Score: 0.3342\nWeighted F1 Score: 0.9381\n"
+      "Testing Metrics for SVM Baseline with Lemmatization & TF-IDF Vectorization\nPrecision: 0.3609\nRecall: 0.4373\nF1 Score: 0.3955\nWeighted F1 Score: 0.9281\n"
      ]
     }
    ],
@@ -178,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,14 +236,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "CPU times: user 3min 52s, sys: 2.39 s, total: 3min 54s\nWall time: 3min 58s\n"
+      "CPU times: user 3min 50s, sys: 1.28 s, total: 3min 51s\nWall time: 3min 52s\n"
      ]
     }
    ],
@@ -237,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,14 +353,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "CPU times: user 42.9 s, sys: 978 ms, total: 43.9 s\nWall time: 44.9 s\n"
+      "CPU times: user 42.4 s, sys: 752 ms, total: 43.2 s\nWall time: 43.7 s\n"
      ]
     }
    ],
@@ -354,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -413,19 +432,19 @@
      "data": {
       "text/plain": [
        "                                            precision    recall  f1_score  \\\n",
-       "Baseline SVM                                 0.673913  0.222222  0.334232   \n",
+       "Baseline SVM                                 0.360947  0.437276  0.395462   \n",
        "Baseline SVM Oversampled with SMOTE          0.339286  0.272401  0.302187   \n",
        "Baseline SVM Undersampled with Tomek Links   0.656250  0.225806  0.336000   \n",
        "\n",
        "                                            weighted_f1  \n",
-       "Baseline SVM                                   0.938102  \n",
+       "Baseline SVM                                   0.928112  \n",
        "Baseline SVM Oversampled with SMOTE            0.925527  \n",
        "Baseline SVM Undersampled with Tomek Links     0.937993  "
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>precision</th>\n      <th>recall</th>\n      <th>f1_score</th>\n      <th>weighted_f1</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Baseline SVM</th>\n      <td>0.673913</td>\n      <td>0.222222</td>\n      <td>0.334232</td>\n      <td>0.938102</td>\n    </tr>\n    <tr>\n      <th>Baseline SVM Oversampled with SMOTE</th>\n      <td>0.339286</td>\n      <td>0.272401</td>\n      <td>0.302187</td>\n      <td>0.925527</td>\n    </tr>\n    <tr>\n      <th>Baseline SVM Undersampled with Tomek Links</th>\n      <td>0.656250</td>\n      <td>0.225806</td>\n      <td>0.336000</td>\n      <td>0.937993</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>precision</th>\n      <th>recall</th>\n      <th>f1_score</th>\n      <th>weighted_f1</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Baseline SVM</th>\n      <td>0.360947</td>\n      <td>0.437276</td>\n      <td>0.395462</td>\n      <td>0.928112</td>\n    </tr>\n    <tr>\n      <th>Baseline SVM Oversampled with SMOTE</th>\n      <td>0.339286</td>\n      <td>0.272401</td>\n      <td>0.302187</td>\n      <td>0.925527</td>\n    </tr>\n    <tr>\n      <th>Baseline SVM Undersampled with Tomek Links</th>\n      <td>0.656250</td>\n      <td>0.225806</td>\n      <td>0.336000</td>\n      <td>0.937993</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 37
+     "execution_count": 34
     }
    ],
    "source": [
@@ -434,9 +453,41 @@
   },
   {
    "source": [
-    "There's a tiny bit of improvement with the undersampled baseline's unweighted F1.\n",
+    "- The baseline SVM with `class_weight=balanced` has the highest unweighted F1\n",
+    "- The undersampled baseline has a lower raw F1, but higher weighted F1.\n",
     "\n",
-    "First let's grid search on the baseline, and then apply that to the Tomek Links undersampled data."
+    "We can take a look at each model's classification report to get a better idea about what's happening."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "              precision    recall  f1-score   support\n\n     class 0       0.97      0.95      0.96      4678\n     class 1       0.36      0.44      0.40       279\n\n    accuracy                           0.92      4957\n   macro avg       0.66      0.70      0.68      4957\nweighted avg       0.93      0.92      0.93      4957\n\n              precision    recall  f1-score   support\n\n     class 0       0.96      0.99      0.97      4678\n     class 1       0.66      0.23      0.34       279\n\n    accuracy                           0.95      4957\n   macro avg       0.81      0.61      0.65      4957\nweighted avg       0.94      0.95      0.94      4957\n\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report \n",
+    "target_names = ['class 0', 'class 1']\n",
+    "# class_weight='balanced' Baseline report\n",
+    "print(classification_report(y_test, SVM_test_preds, target_names=target_names))\n",
+    "# Undersampled Baseline report\n",
+    "print(classification_report(y_test, tomek_logreg_test_preds, target_names=target_names))"
+   ]
+  },
+  {
+   "source": [
+    "There are some differances. But most noteably, the baseline with `class_weight=balanced` predicts the hate speech (1) class much better than the other model. \n",
+    "\n",
+    "Therefore, let's stick with that one and grid search to tune its hyperparameters."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -447,6 +498,13 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
