--- a/models/logisitic_regression.ipynb
+++ b/models/logisitic_regression.ipynb
@@ -552,7 +552,9 @@
   },
   {
    "source": [
-    "Out of all of them, **the baseline oversampled with SMOTE** performed the best. So let's run grid search on that one to find the optimal parameters"
+    "Out of all of them, **the baseline oversampled with SMOTE** performed the best. So let's run grid search on that one to find the optimal parameters.\n",
+    "\n",
+    "It's important to note that this model produces the same score as a baseline SVM."
    ],
    "cell_type": "markdown",
    "metadata": {}
