--- a/preprocessing/nlp_preprocessing.ipynb
+++ b/preprocessing/nlp_preprocessing.ipynb
@@ -325,6 +325,13 @@
   },
   {
    "source": [
+    "Here we can see that our corpus has a vocabulary of 20277. This would also be the number of columns in the sparse matrix after we vectorize the data later."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "Now that the stop words are removed and the corpus is tokenized, let's take a look at the top words in this corpus."
    ],
    "cell_type": "markdown",
